# web_app_on_flask

./: README.md  pyproject.toml  pyrightconfig.json  python.org.html  server.py  weather.py
templates/: index.html
webapp/: __init__.py  python_org_news.py  weather.py
webapp/templates/: index.html
